优化顶栏在顶部时的样式 修改最近文章文字描述

--- a/languages/default.yml
+++ b/languages/default.yml
@@ -61,7 +61,7 @@ aside:
   card_categories: 分类
   card_tags: 标签
   card_archives: 归档
-  card_recent_post: 最新文章
+  card_recent_post: 最近发布
   card_webinfo:
     headline: 网站资讯
     article_name: 文章总数
