--- a/languages/zh-TW.yml
+++ b/languages/zh-TW.yml
@@ -41,7 +41,7 @@ search:
   title: 搜尋
   load_data: 資料庫載入中
   algolia_search:
-    input_placeholder: 搜尋文章
+    input_placeholder: 輸入關鍵字後按下回車查找
     hits_empty: "找不到您查詢的內容：${query}"
     hits_stats: "找到 ${hits} 條結果，用時 ${time} 毫秒"
 
